[package]
name = "unitiled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.25"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
actix-web = "4.0"
actix-web-actors = "4.3.0"
actix = "*"
# serde = {version = "*", features = ["derive"]}
